--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "scripts": {
     "start": "nodemon --exec babel-node src/server.js",
-    "local": "NODE_ENV=dev npm run serve",
+    "local": "set NODE_ENV=dev && npm start",
     "serve": "nodemon src/server.js --exec \"babel-node\"",
     "build": "babel src --out-dir build",
     "compile": "babel src --out-dir .compiled --source-maps --watch"
